Separated code extensions from development snaps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -131,6 +131,8 @@ jobs:
         run: |
           make development-tools
           code --version
+      - name: Install Code extensions
+        run: make code-extensions
       - name: Web Browsers
         run: make web-browsers
 
