--- a/roles/development-tools/tasks/main.yml
+++ b/roles/development-tools/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
-- name: Development Tools - Install snapd apt dependency
+- name: Install snapd apt dependency
   become: true
   apt:
     name: "snapd"
     state: present
 
-- name: Development Snaps
+- name: Install Snaps
   become: true
   snap:
     name: "{{ item.name }}"
@@ -13,16 +13,3 @@
     classic: "{{ item.classic | default('no')}}"
   with_items: "{{ snaps_development }}"
 
-- name: Register currently installed code extensions
-  shell: /snap/bin/code --list-extensions
-  register: installed_code_extensions
-  changed_when: "false"
-
-- name: Debug currently installed code extensions
-  debug:
-    var: installed_code_extensions.stdout_lines
-
-- name: Code Extensions
-  shell: /snap/bin/code --install-extension "{{ item }}"
-  with_items: "{{ code_extensions }}"
-  when: "item not in installed_code_extensions.stdout_lines"
